Fixed footer issue, user activation features no longer obscured on smaller screens

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -83,7 +83,6 @@ a:visited {
 
 /* Footer */
 footer {
-    position: fixed;
     left: 0;
     bottom: 0;
     margin-top: 40px;
